<resources>
    <string name="app_name">1st app</string>
    <string name="button">Button</string>
    <string name="string_button" />
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="this_is_the_example_of_butter_knife">This is the example of butter knife.</string>
    <string name="click">Click</string>
    <string name="display_tost">Display Tost</string>
    <string name="butter_knife">BUTTER KNIFE</string>
    <string name="this_is_the_example_of_view_binding">this_is_the_example_of_view_binding</string>
    <string name="view_binding">View_Binding</string>
</resources>