<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/welcome_back"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/subHeading"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView

        android:id="@+id/subHeading"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:text="@string/this_is_the_example_of_butter_knife"
        android:textColor="#656464"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/b1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/click"
        android:textAllCaps="false"
        android:textSize="15sp"/>


    <Button

        android:id="@+id/b2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/display_tost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/waterMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:text="@string/butter_knife"
        android:textColor="#656464"
        android:textColorHighlight="@android:color/holo_orange_light"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>